[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Entity.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/dash.wav" type="AudioStream" id=3]

[node name="Player" instance=ExtResource( 1 )]

modulate = Color( 0, 0.435294, 1, 1 )
scale = Vector2( 0.45, 0.45 )
script = ExtResource( 2 )
_sections_unfolded = [ "Material", "Transform", "Visibility" ]
Bullet = null
SPEED = 500

[node name="ShotTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.05
one_shot = false
autostart = true

[node name="DashTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.25
one_shot = false
autostart = false

[node name="Sounds" type="Node" parent="." index="4"]

[node name="DashSound" type="AudioStreamPlayer" parent="Sounds" index="0"]

stream = ExtResource( 3 )
volume_db = -15.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]

[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]

[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]


